--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require": {
         "php": "^8.0",
         "ext-pdo": "*",
-        "symfony/process": "^5.2"
+        "symfony/process": "^5.2",
+        "vlucas/phpdotenv": "^5.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
