--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": "^8.0",
         "ext-pdo": "*",
         "symfony/process": "^5.2",
-        "vlucas/phpdotenv": "^5.3"
+        "vlucas/phpdotenv": "^5.3",
+        "fakerphp/faker": "^1.13"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
