--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,11 @@
         "ext-pdo": "*",
         "symfony/process": "^5.2",
         "vlucas/phpdotenv": "^5.3",
-        "fakerphp/faker": "^1.13"
+        "league/flysystem": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "fakerphp/faker": "^1.13"
     },
     "autoload": {
         "psr-4": {
